<resources>
    <string name="app_name">N-Puzzle</string>
    <string name="Play">Play</string>
    <string name="Settings">Settings</string>
    <string name="Vibration">Vibration</string>
    <string name="Music">Music</string>
    <string name="Dark_Mode">Dark Mode</string>
    <string name="description">description</string>
    <string name="action_settings">Settings</string>
    <string name="pleaseEnter">Please enter the number of rows and columns of the board.</string>
    <string name="Rows">Rows</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="Columns">Columns</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
