<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/button_play"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="88dp"
        android:layout_height="45dp"
        android:background="@drawable/n_button"
        android:fontFamily="@font/gals"
        android:shadowColor="#E91E63"
        android:text="@string/Play"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#E91E63"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberPickerX"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/button_settings"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="88dp"
        android:layout_height="45dp"
        android:background="@drawable/n_button"
        android:shadowColor="#E91E63"
        android:text="@string/Settings"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/gals"
        android:textColorHighlight="#E91E63"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_play"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:fontFamily="@font/gals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002" />

    <TextView
        android:id="@+id/tv_getXY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pleaseEnter"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:fontFamily="@font/gals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header"
        app:layout_constraintVertical_bias="0.23000002" />

    <TextView
        android:id="@+id/tv_showSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <NumberPicker
        android:id="@+id/numberPickerX"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_wood"
        android:solidColor="@color/colorPrimary"
        android:theme="@style/AppTheme.Picker"
        app:layout_constraintEnd_toStartOf="@+id/numberPickerY"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_getXY" />

    <NumberPicker
        android:id="@+id/numberPickerY"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/bg_wood"
        android:solidColor="@color/colorPrimary"
        android:theme="@style/AppTheme.Picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/numberPickerX"
        app:layout_constraintTop_toBottomOf="@+id/tv_getXY" />

    <TextView
        android:id="@+id/tv_columns"
        android:layout_width="56dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Columns"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/gals"
        app:layout_constraintBottom_toTopOf="@+id/numberPickerX"
        app:layout_constraintEnd_toStartOf="@+id/tv_rows"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_rows"
        android:layout_width="51dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:text="@string/Rows"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/gals"
        app:layout_constraintBottom_toTopOf="@+id/numberPickerY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_columns" />

</androidx.constraintlayout.widget.ConstraintLayout>